# syslang

./: Echopraxium-syslang.url  LICENSE  README.md  my_first_system.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: getting-started.md
examples/: minimal.syslang.yml
src/syslang/: __init__.py  cli.py  parser.py
src/syslang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/syslang/data/: compatibility.json  patterns.json  principles.json
src/syslang/schemas/: compatibility_schema.json  patterns_schema.json  principles_schema.json
src/syslang/scripts/: validate_principles.py
